[metadata]
name = gcp-infra-helper
version = 0.0.1
author = Frederico Recsky
author_email = c@frederico.me
description = Helper and tools for management of gcp infra and operations
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/fredericorecsky/gcp-infra-helper

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    google-cloud-storage

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    gcp-label = gcp.label:get_label